--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ layout: default
     {% for post in site.posts %}
   <div class="row">
     <div class="col-3">
-      <a href="{{ site.baseurl }}{{ post.url }}"><img src="{{ post.image }}" class="post-image index-image"></a>
+      <a href="{{ site.baseurl }}/{{ post.url }}"><img src="{{ post.image }}" class="post-image index-image"></a>
     </div>
     <div class="col-9">
-      <h5><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h5>
+      <h5><a href="{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a></h5>
       {% if post.author %}
       <p class="text-muted">{{ post.date | date: "%Y-%m-%d" }} le <a href="{{ post.author_url }}">{{ post.author }}</a></p>
 
