--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
 layout: default
-title: Dachaidh
+title: Dachaigh
 ---
 
 <div class="container">
