--- a/search.html
+++ b/search.html
@@ -4,11 +4,11 @@ title: Lorg
 permalink: /lorg/
 ---
 
-<p>Tòisich a' sgrìobhadh anns a' bhogsa gu h-ìosal airson lorg sna postaichean.</p>
+Tòisich a' sgrìobhadh anns a' bhogsa gu h-ìosal airson lorg sna puist.
 
 <!-- Html Elements for Search -->
 <div class="form-group" id="search-container">
-<input class="form-control" type="text" id="search-input" placeholder="Lorg sna postaichean..."><br />
+<input class="form-control" type="text" id="search-input" placeholder="Lorg sna puist..."><br />
 <ul id="results-container"></ul>
 </div>
 
