--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@ title: Lorg
 permalink: /lorg/
 ---
 
-Tòisich a' sgrìobhadh anns a' bhogsa gu h-ìosal airson lorg sna puist.
+<p>Tòisich a' sgrìobhadh anns a' bhogsa gu h-ìosal airson lorg sna puist.</p>
 
 <!-- Html Elements for Search -->
 <div class="form-group" id="search-container">
