--- a/search.html
+++ b/search.html
@@ -6,25 +6,10 @@ permalink: /lorg/
 
 <p>Tòisich a' sgrìobhadh anns a' bhogsa gu h-ìosal airson lorg sna postaichean.</p>
 
-<!-- Html Elements for Search -->
-<div class="form-group" id="search-container">
-<input class="form-control" type="text" id="search-input" placeholder="Lorg sna postaichean..."><br />
-<ul id="results-container"></ul>
-</div>
+<!-- Insert search form (_includes/search-form.html) here -->
+{% include search-form.html %}
 
-<!-- Script pointing to search-script.js -->
-<script src="{{ site.baseurl }}/search-script.js" type="text/javascript"></script>
-
-<!-- Configuration -->
-<script>
-SimpleJekyllSearch({
-  searchInput: document.getElementById('search-input'),
-  resultsContainer: document.getElementById('results-container'),
-  json: '{{ site.baseurl }}/search.json'
-})
-</script>
-
-<hr>
+<div class="section-divider"></div>
 
 <h4>Na postaichean as ùire</h4>
 
